Refactored Navigation Bar

--- a/Headers/procedures.html
+++ b/Headers/procedures.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">Home</title>
+        <title data-pgc-field="page_title">Procedures</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+		<link href="../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -20,20 +20,22 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">Home</h1>
+                <h1 data-pgc-field="page_heading">Procedures</h1>
             </div>
-            <p class="lead" data-pgc-field="page_description">This is where the user starts.</p>
-            <p class="lead" data-pgc-field="page_lead"></p>
-            <p data-pgc-field="page_info">Content.</p>
+            <p class="lead" data-pgc-field="page_description">Listed below are the various procedures for coding and documentation.</p>
+            <p class="lead"></p>
+            <p data-pgc-field="page_info">Coding Conventions.</p>
+            <p data-pgc-field="page_info"><a href="documentationpractices.html">Documentation Practices, Conventions, and Tips.</a></p>
+            <p data-pgc-field="page_info"><a href="changes.html">Change Log.</a></p>
+            <p data-pgc-field="page_info"></p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-		<script src="header.js"></script>
-
+		<script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/js/popper.js"></script>
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
+		<script src="../header.js"></script>
     </body>
 </html>
