--- a/Headers/documentation.html
+++ b/Headers/documentation.html
@@ -10,44 +10,14 @@
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+        <link href="../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-            <a class="navbar-brand" href="index.html">LISA Project</a><a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html" data-pgc-field="documentation_link">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="active nav-link" href="documentation.html" data-pgc-field="documentation_link">Documentation</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="theory.html" data-pgc-field="theory_link">Theory</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="procedures.html" data-pgc-field="procedures_link">Procedures</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="education.html" data-pgc-field="education_link">Education</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="testing.html" data-pgc-field="testing_link">Testing</a>
-                    </li>
-                </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"/>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
+		<div id="header"></div>
+
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
@@ -56,7 +26,7 @@
                 <div id="panels1" role="tablist"> 
                     <div class="card"> 
                         <div class="card-header" role="tab"> 
-                            <h5 class="h4 mb-0"> <a data-toggle="collapse" href="#collapse1" aria-expanded="true" aria-controls="collapse1">MainWndo (Window)</a> </h5> 
+                            <h5 class="h4 mb-0"> <a data-toggle="collapse" href="#collapse1" aria-expanded="true" aria-controls="collapse1">MainWindow (Window)</a> </h5> 
                         </div>                         
                         <div id="collapse1" class="collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#panels1"> 
                             <div class="card-body">
@@ -793,8 +763,9 @@
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/js/popper.js"></script>
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
+		<script src="../header.js"></script>
     </body>
 </html>
