--- a/Headers/theory.html
+++ b/Headers/theory.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
         <meta name="description" content="" data-pgc-field="meta_description"/>
         <meta name="author" content=""/>
-        <title data-pgc-field="page_title">Home</title>
+        <title data-pgc-field="page_title">Theory</title>
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
         <!-- Bootstrap core CSS -->
-        <link href="bootstrap/css/bootstrap.css" rel="stylesheet"/>
+		<link href="../bootstrap/css/bootstrap.css" rel="stylesheet"/>
         <!-- Custom styles for this template -->
-        <link href="sticky-footer-navbar.css" rel="stylesheet"/>
+        <link href="../sticky-footer-navbar.css" rel="stylesheet"/>
     </head>
     <body>
         <!-- Fixed navbar -->
@@ -20,20 +20,27 @@
         <!-- Begin page content -->
         <div class="container" data-pgc-field="page_content">
             <div class="mt-3">
-                <h1 data-pgc-field="page_heading">Home</h1>
+                <h1>Theory</h1>
+                <div class="container">
+                    <div class="mt-3">
+					</div>
+                    <p class="lead"></p>
+                </div>
             </div>
-            <p class="lead" data-pgc-field="page_description">This is where the user starts.</p>
-            <p class="lead" data-pgc-field="page_lead"></p>
-            <p data-pgc-field="page_info">Content.</p>
+            <p class="lead">This document provides the home base for learning more about the
+            theory behind this project.</p>
+            <p class="lead"></p>
+            <p>A detailed discussion of the theoretical background is provided in
+             <a href="theory1_2022.pdf">this document</a>.</p>
+            <p>For an illustration of math in web pages, click <a href="practicemath.html">here</a>.</p>
         </div>
         <footer class="footer ml-auto">&nbsp; &nbsp; Copyright 2022 Thomas Moore.</footer>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/jquery.min.js"></script>
-        <script src="assets/js/popper.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
-		<script src="header.js"></script>
-
+		<script src="../assets/js/jquery.min.js"></script>
+        <script src="../assets/js/popper.js"></script>
+        <script src="../bootstrap/js/bootstrap.min.js"></script>
+		<script src="../header.js"></script>
     </body>
 </html>
