--- a/master.html
+++ b/master.html
@@ -16,31 +16,7 @@
     </head>
     <body>
         <!-- Fixed navbar -->
-        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark"><a class="navbar-brand" href="index.html">LISA Project</a>
-            <a class="navbar-brand" href="#"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html" data-pgc-edit="documentation_link[class, no_content]">Home</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="documentation.html" data-pgc-edit="documentation_link[class, no_content]">Documentation</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="theory.html" data-pgc-edit="theory_link[class, no_content]">Theory</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="procedures.html" data-pgc-edit="procedures_link[class, no_content]">Procedures</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="education.html" data-pgc-edit="education_link[class, no_content]">Education</a>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="testing.html" data-pgc-edit="testing_link[class, no_content]">Testing</a>
-                    </li>
-                </ul>
-                <form class="form-inline mt-2 mt-md-0">
-                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search"/>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
-            </div>
-        </nav>
+		<div id="header"></div>
         <!-- Begin page content -->
         <div class="container" data-pgc-edit="page_content">
             <div class="mt-3">
@@ -57,5 +33,6 @@
         <script src="assets/js/jquery.min.js"></script>
         <script src="assets/js/popper.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+		<script src="header.js"></script>
     </body>
 </html>
